exchange center js modify

--- a/src/Wenwen/FrontendBundle/Resources/views/About/map.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/map.html.twig
@@ -45,7 +45,7 @@
 					<li class="font16"><strong>调查助手</strong></li><li><a href="{{ path('wenwen_frontend_gadget_index') }}" title="PC版">PC版</a></li><li><a href="{{ path('wenwen_frontend_gadget_index') }}" title="iPhone版">iPhone版</a></li><li><a href="{{ path('wenwen_frontend_gadget_index') }}" title="Android版">Android版</a></li>
 				</ul>
 				<ul class="clearfix">
-					<li class="font16"><strong>兑换中心</strong></li><li><a href="{{ path('wenwen_frontend_exchange_index') }}" title="兑换中心">兑换中心</a></li><li><a href="{{ path('wenwen_frontend_exchange_mobileinfo') }}" title="手机费兑换">手机费兑换</a></li><li><a href="{{ path('wenwen_frontend_exchange_alipayinfo') }}" title="支付宝兑换">支付宝兑换</a></li><li><a href="{{ path('wenwen_frontend_exchange_flowinfo') }}" title="手机流量兑换">手机流量兑换</a></li>
+					<li class="font16"><strong>兑换中心</strong></li><li><a href="{{ path('_exchange_index') }}" title="兑换中心">兑换中心</a></li><li><a href="{{ path('_exchange_mobileInfo') }}" title="手机费兑换">手机费兑换</a></li><li><a href="{{ path('_exchange_identityCardComfirm',{'type': 'alipay'}) }}" title="支付宝兑换">支付宝兑换</a></li><li><a href="{{ path('_exchange_flowInfo') }}" title="手机流量兑换">手机流量兑换</a></li>
 				</ul>
 			</div>
 			<div class="box">
