--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
@@ -13,7 +13,7 @@
             {% if app.session.has('uid') %} 
             <a href="{{ path('_advertiserment_list') }}" title="体验广告" {{ router_current == '_advertiserment_list' ? 'class="active"':'' }}>体验广告</a>
             {% endif %}
-            <a href="{{ path('wenwen_frontend_exchange_index') }}" title="兑换中心" {{ router_current == 'wenwen_frontend_exchange_index' ? 'class="active"':'' }}>兑换中心</a>
+            <a href="{{ path('_exchange_index') }}" title="兑换中心" {{ router_current == '_exchange_index' ? 'class="active"':'' }}>兑换中心</a>
             <div class="border"></div>
         </div>
         {% if app.session.has('uid') %}
