quick survey add hot tag

--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/index.html.twig
@@ -32,8 +32,8 @@
 						</span>
 						<div><input type="hidden" name="timelimit_ut" value="1440777600" /><div id="countdown" class="countdown"></div></div>
 						<div class="tips expand-btn">
-							<span>?</span>
-							<div class="tips-con expand-con"><p>倒计时内回答此份快速回答，将额外获得1积分。</p><b class="arrow"></b></div>
+							<span></span>
+							<div class="tips-con expand-con"><p>倒计时内回答此份快速回答，将额外获得1积分。</p></div>
 						</div>
 					</li>
 					<li>
