--- a/web/sass/survey.scss
+++ b/web/sass/survey.scss
@@ -44,7 +44,7 @@
 		cursor: default;
 		@include transition(width, 0);
 		a{
-			margin: 45px auto;
+			margin: 66px auto 45px;
 			color: #fff;
 			background: #ff7733;
 			width: 150px;
