--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/detail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/detail.html.twig
@@ -25,10 +25,10 @@
 					<div class="relate">
 						<img src="{{ asset('img/temp/qsurveyImg.jpg') }}" alt="">
 						<div class="relate-text">
-							<div>时间：08/04 ~ 08/08</div>
+							<div>时间：08/04 ~ 08/08&nbsp;&nbsp;&nbsp;&nbsp;答题奖励：<b>1分</b></div>
 							<div class="description">
 								<b class="btn"></b>
-								<p class="">该题由热心用户：<b>新神</b> 提供，恭喜他获得了<b>200</b>积分！随着网络的普及，视频播放器已成为每个人的手机或电脑的必备软件，那么您平时最喜欢使用视频播放器已成为每个人的手机或电脑的必备软件，那么您平时最喜欢使用</p>
+								<p class="">该题由热心用户：新神 提供，恭喜他获得了<b>200</b>积分！随着网络的普及，视频播放器已成为每个人的手机或电脑的必备软件，那么您平时最喜欢使用视频播放器已成为每个人的手机或电脑的必备软件，那么您平时最喜欢使用</p>
 							</div>
 						</div>
 					</div>
