--- a/web/css/vote.css
+++ b/web/css/vote.css
@@ -291,7 +291,7 @@ body {
 .main-con-left ul {
   width: 100%; }
 .main-con-left li {
-  padding: 10px 20px;
+  padding: 20px;
   border-top: 1px solid #f6f6f6;
   position: relative;
   z-index: 1; }
@@ -326,7 +326,7 @@ body {
     border-left: 1px solid #f6f6f6; }
     .survey-item li span {
       line-height: 22px;
-      color: #979ca6; }
+      color: #646d7a; }
     .survey-item li p {
       line-height: 28px;
       color: #646d7a; }
@@ -368,7 +368,7 @@ body {
   color: #fff;
   line-height: 900%; }
 .vote li {
-  padding: 20px; }
+  padding: 30px 20px; }
   .vote li.vote-new .vote-img {
     width: 15%; }
   .vote li.vote-new .vote-txt {
@@ -376,15 +376,12 @@ body {
   .vote li.vote-new .tips {
     position: absolute;
     z-index: 1000;
-    top: 42px;
-    right: 0px; }
+    top: 23px;
+    right: 5px; }
     .vote li.vote-new .tips span {
-      width: 13px;
-      height: 13px;
-      border-radius: 50%;
-      background: #979797;
-      color: #fff;
-      text-align: center;
+      background: url(../img/vote/doubleTag.png) no-repeat;
+      width: 70px;
+      height: 33px;
       cursor: pointer; }
   .vote li.vote-new .tips-con {
     position: absolute;
@@ -446,8 +443,8 @@ body {
   font-size: 20px;
   position: absolute;
   z-index: 1000;
-  top: 42px;
-  right: 20px;
+  top: 61px;
+  right: 5px;
   height: 52px;
   line-height: 52px; }
   .countdown span {
@@ -556,7 +553,6 @@ body {
     .exchange-dynamics li b {
       color: #ff6700; }
     .exchange-dynamics li p {
-      color: #495361;
       overflow: hidden;
       -ms-text-overflow: ellipsis;
       text-overflow: ellipsis;
