--- a/web/sass/component/survey.scss
+++ b/web/sass/component/survey.scss
@@ -4,7 +4,7 @@
 $h-font-color: #000;
 $h-font-size: 18px;
 $h-small-font-size: 14px;
-$survey-con-font-color: #979ca6;
+$survey-con-font-color: #646d7a;
 $survey-border-color: #f6f6f6;
 
 .main-con-left{
@@ -28,7 +28,7 @@ $survey-border-color: #f6f6f6;
 		width: 100%;
 	}
 	li{
-		padding: 10px 20px;
+		padding: 20px;
 		border-top: $block-inner-border;
 		position: relative;
 		z-index: 1;
@@ -70,7 +70,7 @@ $survey-border-color: #f6f6f6;
 		}
 		p{
 			line-height: 28px;
-			color: #646d7a;
+			color: $survey-con-font-color;
 			strong{
 				color: $main-color;
 				font-size: 16px;
@@ -111,7 +111,7 @@ $survey-border-color: #f6f6f6;
 		line-height: 900%;
 	}
 	li{
-		padding: 20px;
+		padding: 30px 20px;
 		&.vote-new{
 			.vote-img{
 				width: 15%;
@@ -122,15 +122,12 @@ $survey-border-color: #f6f6f6;
 			.tips{
 				position: absolute;
 				z-index: 1000;
-				top: 42px;
-				right: 0px;
-				span{   
-					width: 13px;
-					height: 13px;
-					border-radius: 50%;
-					background: #979797;
-					color: #fff;
-					text-align: center;
+				top: 23px;
+				right: 5px;
+				span{ 
+				    background: url(../img/vote/doubleTag.png) no-repeat;
+					width: 70px;
+					height: 33px;
 					cursor: pointer;
 				}
 			}
@@ -198,8 +195,8 @@ $count-bg: #f5f5f5;
 	font-size: $count-font-size;
 	position: absolute;
 	z-index: 1000;
-	top: 42px;
-	right: 20px;
+	top: 61px;
+	right: 5px;
 	height: 52px; 
 	line-height: 52px;
 	span{
