--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
@@ -73,7 +73,7 @@
 	            </li>
 	        </ul>
 	        <input type="hidden" value="btn" name="btn">
-	        <input type="hidden" value="35d7b9362ee0d9ad0093b5653688618229cbb14a" name="tokenKey" />
+	        <input type="hidden" value="{{ key }}" name="tokenKey" />
         </form>
 	</div>
 </div>
