--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/mobileInfo.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/mobileInfo.html.twig
@@ -14,29 +14,27 @@
 	<div class="main-con-exchange form">
 		<h1>手机充值</h1>
 		<div class="main-con-exchangeInfo">
-			<form action="/exchange/mobileInfo" method="post" name="mobileInfo" id="form1">
+			<form action="{{ path('_exchange_mobileInfo') }}" method="post" name="mobileInfo" id="form1">
 			<ul>
 				<li class="curVal">
 					<label for="curMobile">当前手机号码：</label>
-					<span id="curMobile" class="cur"></span>
+					<span id="curMobile" class="cur">{{ existMobile }}</span>
 					<a href="javascript:void(0)" id="modify">修改</a>
 				</li>
 				<li class="modifyInput">
 					<label for="mobile">手机号码：</label>
-					<input type="text" id="mobile">
+					<input type="text" id="mobile" name="mobile" value="{{ mobile }}">
 					<span id="mobile_succeed"></span>
 					<span id="mobile_error"></span>
 				</li>
 				<li class="modifyInput">
 					<label for="mobileRepeat">再次输入号码：</label>
-					<input type="text" id="mobileRepeat">
+					<input type="text" id="mobileRepeat" name="mobileRepeat">
 					<span id="mobileRepeat_succeed"></span>
 					<span id="mobileRepeat_error"></span>
 				</li>
 				<li>
 					<label for="money">选择兑换金额：</label>
-					<!-- <select id="money"><option selected="" value="20">20元</option><option value="30">30元</option><option value="50">50元</option></select>
-					<span class="equal cur">=2050积分</span> -->
 					<span class="option">20元<div class="points">2010积分</div></span><span class="option">30元<div class="points">2995积分</div></span><span class="option">50元<div class="points">4960积分</div></span>
 					<span id="money_succeed"></span>
 					<span id="money_error"></span>
@@ -45,8 +43,13 @@
 			<div class="detail">
 				<div class="text">本次充值所需积分：<strong id="need">2050</strong>兑换后剩余积分：<strong id="rest">3028</strong></div>
 			</div>
-			<div class="btn"><!-- <a href="finished.html"> --><span id="mobile_save">提交</span><!-- </a> --></div>
-    	</form>
+			<div class="backError">{{code}}</div>
+			<div class="btn"><span id="mobile_save">提交</span></div>
+			<input type="hidden" name="existMobile" id="existMobile"/>
+      		<input type="hidden" name="rechange" id="changes"/>
+      		<input type="hidden" name="curPoints" id="curPoints" value="{{ points }}"/>
+			<input type="hidden" value="{{ tokenKey }}" name="tokenKey" />
+    		</form>
     	</div>
 	</div>
 </div>
