--- a/src/Wenwen/FrontendBundle/Resources/views/Personal/exchangeHistory.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Personal/exchangeHistory.html.twig
@@ -25,54 +25,22 @@
 					</tr>
 				</thead>
 				<tbody>
+					{% if exchange %}
+					{% for item in pagination %}
 					<tr>
-						<td>2015-07-10</td>
-						<td>支付宝-50元</td>
-						<td>5000</td>
-						<td>待审核</td>
+						<td>{{ item.exchangeDate.date | date('Y-m-d') }}</td>
+						<td>{{ item.type }}-{% if item.exType == 1 %}{{ item.targetPoint }}% elseif item.exType == 2 %}{{ item.exchangeItemNumber }}张{% elseif item.exType == 3 %}{{ item.exchangeItemNumber }}元{% elseif item.exType == 4 %}{{ item.exchangeItemNumber }}元{% elseif item.exType == 5 %}{{ item.exchangeItemNumber }}M{% endif %}</td>
+						<td>{{ item.targetPoint }}</td>
+						<td>{% if item.status %} {% if item.status==1 %} 兑换成功 {% elseif item.status==2 %} 兑换失败 {% else %} {% endif %}  {% else %} 处理中 {% endif %}</td>
 					</tr>
-					<tr>
-						<td>2015-07-10</td>
-						<td>手机费-20元</td>
-						<td>2010</td>
-						<td>成功</td>
-					</tr>
-					<tr>
-						<td>2015-07-10</td>
-						<td>手机费-50元</td>
-						<td>4960</td>
-						<td>成功</td>
-					</tr>
-					<tr>
-						<td>2015-07-10</td>
-						<td>手机流量-50M</td>
-						<td>1590</td>
-						<td>成功</td>
-					</tr>
-					<tr>
-						<td>2015-07-10</td>
-						<td>支付宝-50元</td>
-						<td>5000</td>
-						<td>失败</td>
-					</tr>
-					<tr>
-						<td>2015-07-10</td>
-						<td>支付宝-50元</td>
-						<td>5000</td>
-						<td>成功</td>
-					</tr>
+					{% endfor %}
+					{% else %}
+					<tr><td align="center">没有兑换记录</td></tr>
+        			{% endif %}
 				</tbody>
 			</table>
 			<div class="page-wrapper">
-				<p class="page">
-					<span class="active">1</span>
-					<span>2</span>
-					<span>3</span>
-					<span>4</span>
-					<span>5</span>
-					<span>6</span>
-					<span>尾页</span>
-				</p>
+				{{ knp_pagination_render(pagination) }}
 			</div>
 		</div>
 	</div>
