--- a/web/sass/exchangeFlow.scss
+++ b/web/sass/exchangeFlow.scss
@@ -141,8 +141,18 @@
 			font-size: 18px;
 		}
 	}
+	.backError{
+		color: #ff0000;
+		text-align: center;
+		height: 50px;
+		line-height: 50px;
+		&.flowInfo{
+			text-align: left;
+			padding-left: 200px;
+		}
+	}
 	.btn{
-		margin-top: 60px;
+		margin-top: 30px;
 		span{
 			margin-right: 5px;
 			width: 126px;
