--- a/src/Wenwen/FrontendBundle/Resources/views/Personal/profile.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Personal/profile.html.twig
@@ -18,16 +18,16 @@
 			<div class="profile-base">
 				<h3>基本信息</h3>
 				<div class="con clearfix">
-					<div class="face left"><div class="face-wapper"><img src="{{ asset('img/common/default_tx.png') }}" alt=""></div><label class="set" for="attachment">设置头像</label><input type="file" id="attachment" name="attachment"><p class="errorInfo"></p></div>
+					<div class="face left"><div class="face-wapper">{% if user.iconPath %}<img src='{{ asset(user.iconPath) }}'/>{% else %}<img src="{{ asset('img/common/default_tx.png') }}" alt="">{% endif %}</div><label class="set" for="attachment">设置头像</label><input type="file" id="attachment" name="attachment"><p class="errorInfo"></p></div>
 					<form action="" id="regName_form" name="regName_form">
 					<ul class="form text left">
 						<li>
 							<label for="">登录账号：</label>
-							<span>192838384@139.com</span>
+							<span>{{ user.email }}</span>
 						</li>
 						<li>
 							<label for="regName">昵称：</label>
-							<span class="regName-value">192838384</span>
+							<span class="regName-value">{{ user.nick }}</span>
 							<input type="text" id="regName" name="regName" class="hide">
 							<a href="javascript:void(0);" id="regName_modify">修改</a>
 							<a href="javascript:void(0);" id="regName_save" class="hide">保存</a>
@@ -56,17 +56,17 @@
 				</div>
 			</div>
 			<div class="profile-detail">
-				<h3><a href="">编辑</a>详细信息<b>您的个人信息将完全保密，请放心填写</b></h3>
-				<form action="" id="profile_form" name="profile_form">
+				<h3>详细信息<b>您的个人信息将完全保密，请放心填写</b></h3>
+				<form action="{{ path('_user_info') }}" method="post" id="form1">
 				<ul class="con">
-					<li><label for="sex">性别：</label><span><input id="sex" name="sex" type="radio" checked="checked" value="1">男</span><span><input name="sex" type="radio" value="2">女</span></li>
-					<li><label for="birthday">生日：</label><select id="birthday_year" name="birthday"><option value="" selected="selected">年</option></select><select id="birthday_month"><option value="" selected="selected">月</option></select><select id="birthday_day"><option value="" selected="selected">日</option></select></li>
-					<li><label for="address">居住地：</label><select id="address_province" name="address"><option value="" selected="selected">省、市</option></select><select id="address_city"><option value="" selected="selected">地区</option></select></li>
-					<li><label for="income">个人月收入：</label><select id="income" name="income"><option value="1" selected="selected">1000元</option></select></li>
-					<li><label for="job">职业：</label><select id="job_profession" name="job"><option value="" selected="selected">请选择职业</option></select><select id="job_category"><option value="" selected="selected">请选择行业</option></select><select id="job_department"><option value="" selected="selected">请选择部门</option></select></li>
-					<li><label for="education">教育程度：</label><select id="education" name="education"><option value="" selected="selected">请选择</option></select></li>
+					<li><label for="sex">性别：</label><span><input id="sex" name="sex" type="radio" {% if sex %}{% if sex==1 %} checked='checked' {% endif %}{% endif %}{% if user.sex==1 %} checked='checked' {% endif %} value="1">男</span><span><input name="sex" type="radio" {% if sex %}{% if sex==2 %} checked='checked' {% endif %}{% endif %}{% if user.sex==2 %} checked='checked' {% endif %} value="2">女</span></li>
+					<li><label for="birthday">生日：</label><select id="birthday_year" name="year"><option value="0" selected="selected">年</option></select><select id="birthday_month" name="month"><option value="0" selected="selected">月</option></select><select id="birthday_day" name="day"><option value="0" selected="selected">日</option></select></li>
+					<li><label for="address">居住地：</label><select id="address_province" name="province"><option value="0" selected="selected">省、市</option>{% for item in province %}<option value="{{ item.id }}" {% if provinceId %} {% if provinceId == item.id %} selected = "selected" {% endif %} {% endif %}{% if user.province == item.id %} selected = "selected" {% endif %}>{{ item.provinceName }}</option>{% endfor %}</select><select id="address_city" name="city"><option value="0" selected="selected">地区</option></select></li>
+					<li><label for="income">个人月收入：</label><select id="income" name="income"><option value="0" selected="selected">请选择收入</option>{% for item in income %}<option value="{{ item.id }}" {% if month_income %} {% if month_income == item.id %} selected = "selected" {% endif %} {% endif %}{% if user.income == item.id %} selected = "selected" {% endif %}>{{ item.income }}</option>{% endfor %}</select></li>
+					<li><label for="job">职业：</label><select id="job_profession" name="profession"><option value="0" selected="selected">请选择职业</option></select><select id="job_category" name="category"><option value="0" selected="selected">请选择行业</option></select><select id="job_department" name="department"><option value="0" selected="selected">请选择部门</option></select></li>
+					<li><label for="education">教育程度：</label><select id="education" name="education"><option value="0" selected="selected">请选择</option></select></li>
+					<li><label for="hobby">兴趣爱好：</label>{% for item in hobbyList %}<input type="checkbox"  name="hobby[]" value="{{ item.id }}" {% if hobby %}{% for i in hobby %} {% if i ==item.id %} checked = "checked" {% endif %}{% endfor %}{% endif %}  {% if newHobby %}{% for i in newHobby %} {% if i ==item.id %} checked = "checked" {% endif %}{% endfor %}{% endif %}>{{ item.hobbyName }}{% endfor %}</li>
 					<li><label for="signature">签名：</label><textarea id="signature" name="signature"></textarea></li>
-					<li><label for="hobby">爱好：</label><input type="text" id="hobby" name="hobby"></li>
 					<li><label for="music">喜欢的音乐：</label><input type="text" id="music" name="music"></li>
 					<li><label for="wish">本月心愿：</label><input type="text" id="wish" name="wish"></li>
 				</ul>
