--- a/web/css/message.css
+++ b/web/css/message.css
@@ -444,14 +444,18 @@ h1 {
   z-index: 1;
   border-bottom: 2px solid #e6e6e6;
 }
-.main-personal-message .btn span {
+.main-personal-message .btn a {
+  height: 45px;
+  line-height: 45px;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
   width: 110px;
   text-align: center;
   font-size: 16px;
   font-weight: bold;
-  cursor: pointer;
 }
-.main-personal-message .btn span.active, .main-personal-message .btn span:hover {
+.main-personal-message .btn a.active, .main-personal-message .btn a:hover {
   color: #ff6700;
 }
 .main-personal-message .btn .border {
@@ -508,9 +512,6 @@ h1 {
 .main-personal-message li.active {
   border: none;
 }
-.main-personal-message .con {
-  display: none;
-}
 
 .page-wrapper {
   padding: 30px;
@@ -559,80 +560,99 @@ h1 {
   padding: 30px 0;
   line-height: 24px;
   background: #edeff2;
-  color: #535353; }
-  .footer .footer-nav-group {
-    float: left;
-    margin-right: 80px; }
-    .footer .footer-nav-group span {
-      color: #000;
-      font-size: 14px;
-      font-weight: bold;
-      padding: 8px 0;
-      display: inline-block; }
-    .footer .footer-nav-group li span {
-      color: inherit;
-      font-size: 12px;
-      font-weight: normal;
-      padding: 0; }
-  .footer .special {
-    margin-top: 16px; }
-    .footer .special .img-link img {
-      margin-left: 2px;
-      margin-top: 3px;
-      display: inline-block; }
-  .footer .copyright {
-    text-align: center;
-    margin-top: 20px; }
-    .footer .copyright p {
-      line-height: 30px;
-      color: #989898; }
-  .footer .footer-con-right {
-    position: relative; }
-    .footer .footer-con-right .client, .footer .footer-con-right .goTop {
-      width: 60px;
-      height: 40px;
-      line-height: 40px;
-      *line-height: 0;
-      background: #f5f6f8;
-      border: 1px solid #dfe1e6;
-      position: absolute;
-      right: 0;
-      cursor: pointer;
-      font-size: 0;
-      color: #949494;
-      display: block;
-      overflow: hidden;
-      -moz-transition: width 0.3s ease-in-out 0.3s, left 0.3s ease-in-out 0.3s, font-size 0.2s ease-in-out 0.3s, color 0.2s ease-in-out 0.3s;
-      -o-transition: width 0.3s ease-in-out 0.3s, left 0.3s ease-in-out 0.3s, font-size 0.2s ease-in-out 0.3s, color 0.2s ease-in-out 0.3s;
-      -webkit-transition: width 0.3s ease-in-out 0.3s, left 0.3s ease-in-out 0.3s, font-size 0.2s ease-in-out 0.3s, color 0.2s ease-in-out 0.3s;
-      transition: width 0.3s ease-in-out 0.3s, left 0.3s ease-in-out 0.3s, font-size 0.2s ease-in-out 0.3s, color 0.2s ease-in-out 0.3s; }
-      .footer .footer-con-right .client span, .footer .footer-con-right .goTop span {
-        width: 18px;
-        height: 16px;
-        display: inline-block;
-        background: url(../img/common/widget.png) no-repeat;
-        margin: 13px 50px 0 20px;
-        position: absolute; }
-      .footer .footer-con-right .client em, .footer .footer-con-right .goTop em {
-        margin-left: 46px; }
-      .footer .footer-con-right .client:hover, .footer .footer-con-right .goTop:hover {
-        width: 130px;
-        height: 40px;
-        display: inline-block;
-        vertical-align: 20px;
-        font-size: 12px; }
-        .footer .footer-con-right .client:hover em, .footer .footer-con-right .goTop:hover em {
-          display: inline-block;
-          font-style: normal;
-          color: #333; }
-    .footer .footer-con-right .client span {
-      background-position: 0 0; }
-    .footer .footer-con-right .client:hover span {
-      background-position: -19px 0; }
-    .footer .footer-con-right .goTop {
-      top: 41px; }
-      .footer .footer-con-right .goTop span {
-        margin-top: 15px;
-        background-position: 0 -18px; }
-      .footer .footer-con-right .goTop:hover span {
-        background-position: -19px -18px; }
+  color: #535353;
+}
+.footer .footer-nav-group {
+  float: left;
+  margin-right: 80px;
+}
+.footer .footer-nav-group span {
+  color: #000;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 8px 0;
+  display: inline-block;
+}
+.footer .footer-nav-group li span {
+  color: inherit;
+  font-size: 12px;
+  font-weight: normal;
+  padding: 0;
+}
+.footer .special {
+  margin-top: 16px;
+}
+.footer .special .img-link img {
+  margin-left: 2px;
+  margin-top: 3px;
+  display: inline-block;
+}
+.footer .copyright {
+  text-align: center;
+  margin-top: 20px;
+}
+.footer .copyright p {
+  line-height: 30px;
+  color: #989898;
+}
+.footer .footer-con-right {
+  position: relative;
+}
+.footer .footer-con-right .client, .footer .footer-con-right .goTop {
+  width: 60px;
+  height: 40px;
+  line-height: 40px;
+  *line-height: 0;
+  background: #f5f6f8;
+  border: 1px solid #dfe1e6;
+  position: absolute;
+  right: 0;
+  cursor: pointer;
+  font-size: 0;
+  color: #949494;
+  display: block;
+  overflow: hidden;
+  -moz-transition: width 0.3s ease-in-out 0.3s, left 0.3s ease-in-out 0.3s, font-size 0.2s ease-in-out 0.3s, color 0.2s ease-in-out 0.3s;
+  -o-transition: width 0.3s ease-in-out 0.3s, left 0.3s ease-in-out 0.3s, font-size 0.2s ease-in-out 0.3s, color 0.2s ease-in-out 0.3s;
+  -webkit-transition: width 0.3s ease-in-out 0.3s, left 0.3s ease-in-out 0.3s, font-size 0.2s ease-in-out 0.3s, color 0.2s ease-in-out 0.3s;
+  transition: width 0.3s ease-in-out 0.3s, left 0.3s ease-in-out 0.3s, font-size 0.2s ease-in-out 0.3s, color 0.2s ease-in-out 0.3s;
+}
+.footer .footer-con-right .client span, .footer .footer-con-right .goTop span {
+  width: 18px;
+  height: 16px;
+  display: inline-block;
+  background: url(../img/common/widget.png) no-repeat;
+  margin: 13px 50px 0 20px;
+  position: absolute;
+}
+.footer .footer-con-right .client em, .footer .footer-con-right .goTop em {
+  margin-left: 46px;
+}
+.footer .footer-con-right .client:hover, .footer .footer-con-right .goTop:hover {
+  width: 130px;
+  height: 40px;
+  display: inline-block;
+  vertical-align: 20px;
+  font-size: 12px;
+}
+.footer .footer-con-right .client:hover em, .footer .footer-con-right .goTop:hover em {
+  display: inline-block;
+  font-style: normal;
+  color: #333;
+}
+.footer .footer-con-right .client span {
+  background-position: 0 0;
+}
+.footer .footer-con-right .client:hover span {
+  background-position: -19px 0;
+}
+.footer .footer-con-right .goTop {
+  top: 41px;
+}
+.footer .footer-con-right .goTop span {
+  margin-top: 15px;
+  background-position: 0 -18px;
+}
+.footer .footer-con-right .goTop:hover span {
+  background-position: -19px -18px;
+}
