--- a/web/sass/message.scss
+++ b/web/sass/message.scss
@@ -14,7 +14,10 @@
 		position: relative;
 		z-index: 1;
 		border-bottom: 2px solid #e6e6e6;
-		span{
+		a{
+			height: 45px;
+			line-height: 45px;
+			@include dib();
 			width: 110px;
 			text-align: center;
 			font-size: 16px;
@@ -22,7 +25,6 @@
 			&.active, &:hover{
 				color: $main-color;
 			}
-			cursor: pointer;
 		}
 		.border{
 			position: absolute;
@@ -80,9 +82,6 @@
 		&.active{
 			border: none;
 		}
-	}
-	.con{
-		display: none;
 	}
 }
 @import "component/page";
