--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -29,9 +29,9 @@
 					</ul>
 					<div class="login-btn" id="submit_button"><!-- <a href="home.html"> -->登录<!-- </a> --></div>
 					</form>
-					<p><a href="{{ path('wenwen_frontend_user_resetpwdemail') }}" class="spec right">忘记密码？</a>还没账号，<a href="{{ path('wenwen_frontend_user_register') }}">马上注册</a></p>
+					<p><a href="{{ path('_user_reset') }}" class="spec right">忘记密码？</a>还没账号，<a href="{{ path('_user_reg') }}">马上注册</a></p>
 					<div class="login-btn-others">
-						<span><a href="{{ path('wenwen_frontend_user_weibo') }}">微博登录</a><a href="{{ path('wenwen_frontend_user_qq') }}" class="qq-login">QQ登录</a></span>
+						<span><a href="{{ path('_user_login') }}">微博登录</a><a href="{{ path('_user_login') }}" class="qq-login">QQ登录</a></span>
 					</div>
 				</div>
 			</div>
