--- a/web/css/resetPwd.css
+++ b/web/css/resetPwd.css
@@ -251,7 +251,6 @@ body {
   width: 256px;
 }
 .main-resetPwd-con span {
-  margin-left: 26px;
   line-height: 24px;
 }
 .main-resetPwd-con span.focus, .main-resetPwd-con span.error {
@@ -260,6 +259,10 @@ body {
 }
 .main-resetPwd-con span.error, .main-resetPwd-con span strong {
   color: #ff0000;
+}
+.main-resetPwd-con span strong#second {
+  border: none;
+  background: none;
 }
 .main-resetPwd-con span.btn {
   margin-top: 30px;
@@ -286,6 +289,11 @@ body {
   -moz-box-shadow: 0 2px 0 #eee;
   box-shadow: 0 2px 0 #eee;
   cursor: default;
+}
+.main-resetPwd-con span .activeEmail {
+  font-size: 12px;
+  color: #0078b6;
+  display: inline;
 }
 
 .footer {
