--- a/src/Wenwen/FrontendBundle/Resources/views/User/active.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/active.html.twig
@@ -15,7 +15,7 @@
 		<div class="con">
 			<div class="text">
 				<div class="title">就差一步了，快去激活您的账户吧！</div>
-				<p>我们已经向您的邮箱zeebee@hotmail.com发送了一封激活邮件，请点击邮件中的链接完成注册。</p>
+				<p>我们已经向您的邮箱{{ user.email }}发送了一封激活邮件，请点击邮件中的链接完成注册。</p>
 				<a href="">立即进入邮箱</a>
 			</div>
 		</div>
