--- a/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
@@ -16,21 +16,21 @@
       	<div class="step3">
 			<div class="steps"><span>1 输入邮箱地址</span><span class="pass">2 重置密码</span><span class="last active">3 完成</span></div>
 			<div class="main-resetPwd-con">
-				<div><img src="{{ asset('img/common/success_email.png') }}" alt=""><span><b>密码修改成功！</b><a href="{{ path('wenwen_frontend_home_home') }}">回首页</a></span></div>
+				<div><img src="{{ asset('img/common/success_email.png') }}" alt="密码修改成功"><span><b>密码修改成功！</b><a href="{{ path('wenwen_frontend_home_home') }}">回首页</a></span></div>
 			</div>
 		</div>
-      	{% endif %}
+      	{% else %}
 		<div class="step2">
 			<div class="steps"><span class="pass">1 输入邮箱地址</span><span class="active">2 重置密码</span><span class="last">3 完成</span></div>
 			<form action="{{ path('_user_resetPass',{'code':pwdcode.code,'id':user.id }) }}" method="post" name="form1" id="form1" >
 			<div class="main-resetPwd-con">
 				<ul>
 					<li>
-						<div><label for="">请输入新密码：</label><input type="password" id="pwd" name="pwd"></div>
+						<div><label for="pwd">请输入新密码：</label><input type="password" id="pwd" name="pwd"></div>
 						<div class="prompt"><span class="hide" id="pwdStrength"><em class="fl">安全程度：</em><b class="c1">弱</b><b>中</b><b>强</b></span><span id="pwd_succeed"></span><span id="pwd_error"></span></div>
 					</li>
 					<li>
-						<div><label for="">请再次输入：</label><input type="password" id="pwdRepeat" name="pwdRepeat"></div>
+						<div><label for="pwdRepeat">请再次输入：</label><input type="password" id="pwdRepeat" name="pwdRepeat"></div>
 						<div class="prompt"><span id="pwdRepeat_succeed"></span><span id="pwdRepeat_error"></span></div>
 					</li>
 				</ul>
@@ -38,6 +38,7 @@
 			</div>
 			</form>
 		</div>
+		{% endif %}
 	</div>
 </div>
 {% endblock %}
