--- a/src/Jili/ApiBundle/Resources/views/Admin/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/login.html.twig
@@ -12,12 +12,12 @@ border=0>
     <TD align=middle>
       <TABLE cellSpacing=0 cellPadding=0 width=468 border=0>
         <TR>
-          <TD><IMG height=23 src="{{ asset('images/admin/login_1.jpg')}}" width=468></TD></TR>
+          <TD><IMG height=23 src="{{ asset('img/admin/login_1.jpg')}}" width=468></TD></TR>
         <TR>
-          <TD><IMG height=147 src="{{ asset('images/admin/login_2.jpg')}}" width=468></TD></TR></TABLE>
+          <TD><IMG height=147 src="{{ asset('img/admin/login_2.jpg')}}" width=468></TD></TR></TABLE>
       <TABLE cellSpacing=0 cellPadding=0 width=468 bgColor=#ffffff border=0>
         <TR>
-          <TD width=16><IMG height=122 src="{{ asset('images/admin/login_3.jpg')}}" width=16></TD>
+          <TD width=16><IMG height=122 src="{{ asset('img/admin/login_3.jpg')}}" width=16></TD>
           <TD align=middle>
             <TABLE cellSpacing=0 cellPadding=0 width=230 border=0>
               <FORM name=form1 action="{{ path('_admin_login') }}" method='post'>
@@ -49,11 +49,11 @@ border=0>
               <TR>
                 <TD>&nbsp;</TD>
                 <TD>&nbsp;</TD>
-                <TD><INPUT type=image height=18 width=70 src="{{ asset('images/admin/bt_login.gif')}}"></TD></TR></FORM></TABLE></TD>
-          <TD width=16><IMG height=122 src="{{ asset('images/admin/login_4.jpg') }}" width=16></TD></TR></TABLE>
+                <TD><INPUT type=image height=18 width=70 src="{{ asset('img/admin/bt_login.gif')}}"></TD></TR></FORM></TABLE></TD>
+          <TD width=16><IMG height=122 src="{{ asset('img/admin/login_4.jpg') }}" width=16></TD></TR></TABLE>
       <TABLE cellSpacing=0 cellPadding=0 width=468 border=0>
         <TR>
-          <TD><IMG height=16 src="{{ asset('images/admin/login_5.jpg')}}" width=468></TD></TR></TABLE>
+          <TD><IMG height=16 src="{{ asset('img/admin/login_5.jpg')}}" width=468></TD></TR></TABLE>
       <TABLE cellSpacing=0 cellPadding=0 width=468 border=0>
         <TR>
           </TR></TABLE></TD></TR></TABLE></BODY></HTML>
