--- a/src/Jili/ApiBundle/Resources/views/Admin/main.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/main.html.twig
@@ -6,14 +6,14 @@
 <BODY>
 <TABLE cellSpacing=0 cellPadding=0 width="100%" align=center border=0>
   <TR height=28>
-    <TD background="{{ asset('images/admin/title_bg1.jpg')}}">当前位置: </TD></TR>
+    <TD background="{{ asset('img/admin/title_bg1.jpg')}}">当前位置: </TD></TR>
   <TR>
     <TD bgColor=#b1ceef height=1></TD></TR>
   <TR height=20>
-    <TD background="{{ asset('images/admin/shadow_bg.jpg')}}"/></TD></TR></TABLE>
+    <TD background="{{ asset('img/admin/shadow_bg.jpg')}}"/></TD></TR></TABLE>
 <TABLE cellSpacing=0 cellPadding=0 width="90%" align=center border=0>
   <TR height=100>
-    <TD align=middle width=100><IMG height=100 src="{{ asset('images/admin/admin_p.gif')}}" width=90></TD>
+    <TD align=middle width=100><IMG height=100 src="{{ asset('img/admin/admin_p.gif')}}" width=90></TD>
     <TD width=60>&nbsp;</TD>
     <TD>
       <TABLE height=100 cellSpacing=0 cellPadding=0 width="100%" border=0>
