--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/_mobileFinish.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/_mobileFinish.html.twig
@@ -4,7 +4,7 @@
 			<div class="con">
 				<h2>我们已经收到您的手机费兑换申请！</h2>
 				<div class="prompt">
-					<p><em>※</em>兑换会在<b>三个工作日内</b>完成（遇周末及节假日顺延），请关注您的<a href="{{ path('wenwen_frontend_personal_exchange') }}">兑换历史</a>，来及时了解兑换状态。<br><em>※</em>如果兑换失败，积分会自动返还到您的积粒网帐户。</p>
+					<p><em>※</em>兑换会在<b>三个工作日内</b>完成（遇周末及节假日顺延），请关注您的<a href="{{ path('_user_exchange',{'type':0, 'exchangeType':1}) }}">兑换历史</a>，来及时了解兑换状态。<br><em>※</em>如果兑换失败，积分会自动返还到您的积粒网帐户。</p>
 				</div>
 			</div>
     		<div class="tips">
