--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
@@ -37,7 +37,7 @@
 	                        <dt>亚马逊礼品卡兑换</dt>
 	                        <dd class="text">用积分兑换亚马逊礼品卡，<strong>2000米粒</strong>起兑</dd>
 	                        <dd class="exchangeBtn">
-	                        	<a href="javascript:void(0)" id="amazonBtn" class="disabled">立即兑换</a>
+	                        	<a href="javascript:void(0)" id="amazonBtn" class="disabled">暂时关闭</a>
 	                        </dd>
 	                    </dl>
 	                </div>
