--- a/web/css/resetPwd.css
+++ b/web/css/resetPwd.css
@@ -228,6 +228,7 @@ body {
   padding-left: 165px;
 }
 .main-resetPwd .step3 .main-resetPwd-con span {
+  padding-left: 20px;
   display: inline-block;
   *display: inline;
   *zoom: 1;
